# Algorithms

./: README.md  pyproject.toml
algorithms/singlefiles/: 1a.solveMeFirst.py  1b.simpleArraySum.py  1c.compareTriplets.py  1d.aVeryBigSum.py  1e.diagonalDifference.py
