[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["BruceMcD <162571835+BruceMcD@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
